// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event.review it fetches an event review: event2 1`] = `
Object {
  "node": Object {
    "review": null,
    "title": "PHPTourDuFuture",
  },
}
`;

exports[`Event.review it fetches an event review: eventCreateByAUserReviewApproved 1`] = `
Object {
  "node": Object {
    "review": Object {
      "comment": null,
      "refusedReason": "NONE",
      "reviewer": Object {
        "_id": "userAdmin",
      },
      "status": "APPROVED",
    },
    "title": "event Create By user with review approved",
  },
}
`;

exports[`Event.review it fetches an event review: eventCreateByAUserReviewAwaiting 1`] = `
Object {
  "node": Object {
    "review": Object {
      "comment": null,
      "refusedReason": "NONE",
      "reviewer": null,
      "status": "AWAITING",
    },
    "title": "event Create By user with review in awaiting",
  },
}
`;

exports[`Event.review it fetches an event review: eventCreateByAUserReviewRefused 1`] = `
Object {
  "node": Object {
    "review": Object {
      "comment": "This is a spam",
      "refusedReason": "SPAM",
      "reviewer": Object {
        "_id": "user516",
      },
      "status": "REFUSED",
    },
    "title": "event Create By user with review refused",
  },
}
`;
